[metadata]
name = audmetric
author = Johannes Wagner, Hagen Wierstorf, Stephan Huber, Andreas Triantafyllopoulos, Uwe Reichel
author-email = jwagner@audeering.com
url = https://audeering.github.io/audmetric/
project-urls =
    Documentation = https://audeering.github.io/audmetric/
description = Evaluate machine-learning models
long-description = file: README.rst, CHANGELOG.rst
license = MIT
license-file = LICENSE
keywords = mlops, machine learning
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer >=1.1.0
    numpy
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audmetric
    --cov-fail-under=100
    --cov-report xml
    --cov-report term-missing
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401  # ignore unused imports
