[metadata]
name = audmetric
author = Johannes Wagner, Hagen Wierstorf, Stephan Huber, Andreas Triantafyllopoulos, Uwe Reichel
author_email = jwagner@audeering.com
url = https://audeering.github.io/audmetric/
project_urls =
    Documentation = https://audeering.github.io/audmetric/
description = Evaluate machine-learning models
long_description = file: README.rst, CHANGELOG.rst
license = MIT
license_file = LICENSE
keywords = mlops, machine learning
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    audeer >=1.1.0
    numpy
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audmetric
    --cov-fail-under=100
    --cov-report xml
    --cov-report term-missing
xfail_strict = true

[flake8]
exclude =
    .eggs,
    build,
extend-ignore =
    # math, https://github.com/PyCQA/pycodestyle/issues/513
    W503,
per-file-ignores =
    # ignore unused imports
    __init__.py: F401,
